# django-assignment

./: .dockerignore  .python-version  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
backend/: __init__.py  celery.py  settings.py  urls.py
videos/: admin.py  models.py  signals.py  tasks.py  tests.py  urls.py  views.py
videos/templates/videos/: detail.html  list.html
